[package]
name = "rust-uniswap-data-extractor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = "0.6.1"
anyhow = "1.0.70"
clap = { version = "4", features = ["derive", "env"] }
colored = "2.0.0"
ethers = { version = "2.0", features = ["abigen", "ws", "ipc"] }
ethers-contract = "2.0"
ethers-core = "2.0"
ethers-providers = "2.0"
futures = "0.3.5"
futures-util = "*"
rayon = "1.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.29.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
